--- a/style.css
+++ b/style.css
@@ -9,21 +9,21 @@
 .element .overlap-group-wrapper {
   background-color: black;
   background-size: 100% 100%;
-  width: 1000px;
-  height: 1936.17px;
+  width: 320px;
+  height: 620px; 
 }
 
 .element .overlap-group {
   position: relative;
-  height: 1936px;
+  height: 620px; /* 1936px → 620px */
   background-color: #132f5a;
   background-size: 100% 100%;
 }
 
 .element .overlap {
   position: absolute;
-  width: 1000px;
-  height: 1391px;
+  width: 320px;
+  height: 445px; 
   top: 0;
   left: 0;
   background-color: #3559A6;
@@ -32,36 +32,36 @@
 
 .element .div {
   position: absolute;
-  width: 946px;
-  height: 1170px;
-  top: 45px;
-  left: 24px;
+  width: 303px; 
+  height: 374px;
+  top: 14px;
+  left: 8px;
 }
 
 .element .overlap-2 {
   position: absolute;
-  width: 946px;
-  height: 1109px;
-  top: 62px;
+  width: 303px;
+  height: 355px;
+  top: 20px;
   left: 0;
 }
 
 .element .background-image {
   position: absolute;
-  width: 741px;
-  height: 778px;
-  top: 317px;
-  left: 91px;
+  width: 237px;
+  height: 249px;
+  top: 101px;
+  left: 29px; 
 }
 
 .element .sub-title {
   position: absolute;
-  top: 71px;
-  left: 110px;
+  top: 23px;
+  left: 35px;
   font-family: "NanumSquare-ExtraBold", Helvetica;
   font-weight: 800;
   color: #f5fbff;
-  font-size: 125.9px;
+  font-size: 40px; 
   letter-spacing: 0;
   line-height: normal;
   white-space: nowrap;
@@ -70,11 +70,11 @@
 .element .title {
   position: absolute;
   top: 0;
-  left: 235px;
+  left: 75px; 
   font-family: "NanumSquare-Regular", Helvetica;
   font-weight: 400;
   color: #f5fbff;
-  font-size: 64.1px;
+  font-size: 21px;
   letter-spacing: 0;
   line-height: normal;
   white-space: nowrap;
@@ -82,37 +82,37 @@
 
 .element .start-icon-small {
   position: absolute;
-  width: 151px;
-  height: 151px;
-  top: 204px;
-  left: 16px;
+  width: 48px;
+  height: 48px; 
+  top: 65px; 
+  left: 5px;
 }
 
 .element .start-icon-large {
   position: absolute;
-  width: 88px;
-  height: 88px;
-  top: 351px;
+  width: 28px; 
+  height: 28px; 
+  top: 112px;
   left: 0;
 }
 
 .element .image {
   position: absolute;
-  width: 610px;
-  height: 610px;
-  top: 390px;
-  left: 171px;
+  width: 195px; 
+  height: 195px; 
+  top: 125px;
+  left: 55px; 
 }
 
 .element .hash {
   position: absolute;
-  width: 211px;
-  top: 1063px;
-  left: 735px;
+  width: 68px;
+  top: 340px;
+  left: 235px; 
   font-family: "NanumSquare-Bold", Helvetica;
   font-weight: 400;
   color: #ffffff;
-  font-size: 44.3px;
+  font-size: 14px; 
   letter-spacing: 0;
   line-height: normal;
   white-space: nowrap;
@@ -128,29 +128,29 @@
 
 .element .share {
   position: absolute;
-  width: 96px;
-  height: 96px;
-  top: 700px;
-  left: 204px;
+  width: 31px;
+  height: 31px; 
+  top: 224px;
+  left: 65px;
 }
 
 .element .img {
   position: absolute;
-  width: 80px;
-  height: 80px;
+  width: 26px; 
+  height: 26px; 
   top: 0;
-  left: 866px;
+  left: 277px;
 }
 
 .element .p {
   position: absolute;
-  width: 211px;
-  top: 1236px;
-  left: 759px;
+  width: 68px;
+  top: 396px;
+  left: 243px;
   font-family: "NanumSquare-Bold", Helvetica;
   font-weight: 400;
   color: #ffffff;
-  font-size: 44.3px;
+  font-size: 14px;
   letter-spacing: 0;
   line-height: normal;
   white-space: nowrap;
@@ -158,13 +158,13 @@
 
 .element .hash-2 {
   position: absolute;
-  width: 211px;
-  top: 1303px;
-  left: 759px;
+  width: 68px;
+  top: 417px;
+  left: 243px;
   font-family: "NanumSquare-Bold", Helvetica;
   font-weight: 400;
   color: #ffffff;
-  font-size: 44.3px;
+  font-size: 14px;
   letter-spacing: 0;
   line-height: normal;
   white-space: nowrap;
@@ -173,22 +173,22 @@
 .element .top-note-group {
   display: flex;
   flex-direction: column;
-  width: 187px;
+  width: 60px;
   align-items: center;
-  gap: 44px;
+  gap: 14px;
   position: absolute;
-  top: 1533px;
-  left: 80px;
+  top: 491px;
+  left: 26px;
 }
 
 .element .top-note-title {
   position: relative;
   align-self: stretch;
-  margin-top: -1.00px;
+  margin-top: -1px;
   font-family: "NanumSquare-Bold", Helvetica;
   font-weight: 700;
   color: #e3effa;
-  font-size: 44.3px;
+  font-size: 14px;
   text-align: center;
   letter-spacing: 0;
   line-height: normal;
@@ -200,27 +200,27 @@
   font-family: "NanumSquare-Regular", Helvetica;
   font-weight: 400;
   color: #e3effa;
-  font-size: 60px;
+  font-size: 19px;
   letter-spacing: 0;
   line-height: normal;
 }
 
 .element .middle-note-group {
   position: absolute;
-  width: 184px;
-  height: 162px;
-  top: 1529px;
-  left: 410px;
+  width: 59px;
+  height: 52px;
+  top: 489px;
+  left: 131px;
 }
 
 .element .middle-note-title {
   position: absolute;
   top: 0;
-  left: 21px;
+  left: 7px;
   font-family: "NanumSquare-Bold", Helvetica;
   font-weight: 700;
   color: #e3effa;
-  font-size: 44.3px;
+  font-size: 14px;
   letter-spacing: 0;
   line-height: normal;
   white-space: nowrap;
@@ -228,12 +228,12 @@
 
 .element .text-wrapper-2 {
   position: absolute;
-  top: 94px;
+  top: 30px;
   left: 0;
   font-family: "NanumSquare-Regular", Helvetica;
   font-weight: 400;
   color: #e3effa;
-  font-size: 60px;
+  font-size: 19px;
   letter-spacing: 0;
   line-height: normal;
   white-space: nowrap;
@@ -241,18 +241,18 @@
 
 .element .base-note-group {
   position: absolute;
-  width: 136px;
-  height: 162px;
-  top: 1525px;
-  left: 733px;
+  width: 44px;
+  height: 52px; 
+  top: 488px;
+  left: 235px;
 }
 
 .element .base-note-title {
   top: 0;
-  left: 16px;
+  left: 5px;
   font-family: "NanumSquare-Bold", Helvetica;
   font-weight: 700;
-  font-size: 44.3px;
+  font-size: 14px;
   position: absolute;
   color: #e3effa;
   letter-spacing: 0;
