--- a/style.css
+++ b/style.css
@@ -1,3 +1,34 @@
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body, .element, .overlap-group-wrapper, .overlap-group, .overlap {
+  width: 100vw;
+  height: 100vh;
+  min-width: 100vw;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.overlap-group, .overlap, .overlap-group-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+img, .image {
+  max-width: 100vw;
+  max-height: 100vh;
+  width: auto;
+  height: auto;
+  object-fit: contain;
+}
+
 .element {
   background-color: transparent;
   display: flex;
@@ -8,125 +39,106 @@
 
 .element .overlap-group-wrapper {
   background-color: black;
-  background-size: 100% 100%;
-  width: 320px;
-  height: 620px;
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
   position: relative;
 }
 
 .element .overlap-group {
   position: relative;
-  height: 620px;
+  width: 100vw;
+  height: 100vh;
   background-color: #132f5a;
-  background-size: 100% 100%;
+  background-size: cover;
 }
 
 .element .overlap {
   position: absolute;
-  width: 320px;
-  height: 445px;
+  width: 100vw;
+  height: 72vh;
   top: 0;
   left: 0;
   background-color: #3559A6;
-  background-size: 100% 100%;
+  background-size: cover;
 }
 
 .element .div {
   position: absolute;
-  width: 303px;
-  height: 374px;
-  top: 14px;
-  left: 8px;
+  width: 95vw;
+  height: 60vh;
+  top: 2vh;
+  left: 2vw;
 }
 
 .element .overlap-2 {
   position: absolute;
-  width: 303px;
-  height: 355px;
-  top: 20px;
+  width: 95vw;
+  height: 55vh;
+  top: 3vh;
   left: 0;
 }
 
 .element .background-image {
   position: absolute;
-  width: 237px;
-  height: 249px;
-  top: 101px;
-  left: 29px;
+  width: 70vw;
+  height: 30vh;
+  top: 25vh;
+  left: 10vw;
 }
 
 .element .sub-title {
   position: absolute;
-  top: 23px;
+  top: 4vh;
   left: 50%;
   transform: translateX(-50%);
-  font-family: "NanumSquare-ExtraBold", Helvetica;
-  font-weight: 800;
-  color: #f5fbff;
-  font-size: 40px;
-  letter-spacing: 0;
-  line-height: normal;
-  white-space: nowrap;
-  text-align: center;
+  font-size: 6vw;
 }
 
 .element .title {
   position: absolute;
   top: 0;
-  left: 75px;
-  font-family: "NanumSquare-Regular", Helvetica;
-  font-weight: 400;
-  color: #f5fbff;
-  font-size: 21px;
-  letter-spacing: 0;
-  line-height: normal;
-  white-space: nowrap;
+  left: 20vw;
+  font-size: 4vw;
 }
 
 .element .start-icon-small {
   position: absolute;
-  width: 48px;
-  height: 48px;
-  top: 65px;
-  left: 5px;
+  width: 12vw;
+  height: 12vw;
+  top: 10vh;
+  left: 2vw;
 }
 
 .element .start-icon-large {
   position: absolute;
-  width: 28px;
-  height: 28px;
-  top: 112px;
+  width: 7vw;
+  height: 7vw;
+  top: 18vh;
   left: 0;
 }
 
 .element .image {
   position: absolute;
-  width: 195px;
-  height: 195px;
-  top: 125px;
-  left: 55px;
+  width: 50vw;
+  height: 25vh;
+  top: 22vh;
+  left: 20vw;
 }
 
 .element .hash,
 .element .p {
   position: absolute;
-  width: 68px;
-  font-family: "NanumSquare-Bold", Helvetica;
-  font-weight: 400;
-  color: #ffffff;
-  font-size: 14px;
-  letter-spacing: 0;
-  line-height: normal;
-  white-space: nowrap;
-  text-align: center;
+  width: 18vw;
+  font-size: 3vw;
 }
 .element .hash {
-  top: 340px;
-  left: 235px;
+  top: 55vh;
+  left: 70vw;
 }
 .element .p {
-  top: 360px;
-  left: 235px;
+  top: 59vh;
+  left: 70vw;
 }
 
 .element .text-wrapper {
@@ -139,18 +151,18 @@
 
 .element .share {
   position: absolute;
-  width: 31px;
-  height: 31px;
-  top: 224px;
-  left: 65px;
+  width: 8vw;
+  height: 8vw;
+  top: 36vh;
+  left: 18vw;
 }
 
 .element .img {
   position: absolute;
-  width: 26px;
-  height: 26px;
+  width: 7vw;
+  height: 7vw;
   top: 0;
-  left: 277px;
+  left: 85vw;
 }
 /* 노트 그룹 컨테이너 */
 .notes-container {
@@ -158,10 +170,10 @@
   justify-content: center;
   gap: 5%;
   position: absolute;
-  top: 490px;
+  top: 78vh;
   left: 0;
   right: 0;
-  padding: 0 5%;
+  padding: 0 5vw;
 }
 
 /* 공통 노트 그룹 스타일 */
@@ -171,7 +183,7 @@
   align-items: center;
   text-align: center;
   gap: 10px;
-  width: 30%; /* 3개 그룹이 가로 정렬되도록 */
+  width: 30vw; /* 3개 그룹이 가로 정렬되도록 */
 }
 
 /* 타이틀 공통 스타일 */
