--- a/style.css
+++ b/style.css
@@ -40,23 +40,23 @@ img, .image {
 .element .overlap-group-wrapper {
   background-color: black;
   background-size: cover;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   position: relative;
 }
 
 .element .overlap-group {
   position: relative;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: #132f5a;
   background-size: cover;
 }
 
 .element .overlap {
   position: absolute;
-  width: 100vw;
-  height: 72vh;
+  width: 100%;
+  height: 72%;
   top: 0;
   left: 0;
   background-color: #3559A6;
@@ -65,80 +65,102 @@ img, .image {
 
 .element .div {
   position: absolute;
-  width: 95vw;
-  height: 60vh;
-  top: 2vh;
-  left: 2vw;
+  width: 95%;
+  height: 60%;
+  top: 2%;
+  left: 2%;
 }
 
 .element .overlap-2 {
   position: absolute;
-  width: 95vw;
-  height: 55vh;
-  top: 3vh;
+  width: 95%;
+  height: 55%;
+  top: 3%;
   left: 0;
 }
 
 .element .background-image {
   position: absolute;
-  width: 70vw;
-  height: 30vh;
-  top: 25vh;
-  left: 10vw;
+  width: 70%;
+  height: 30%;
+  top: 25%;
+  left: 10%;
 }
 
 .element .sub-title {
   position: absolute;
-  top: 4vh;
+  top: 4%;
   left: 50%;
   transform: translateX(-50%);
-  font-size: 6vw;
+  font-family: "NanumSquare-ExtraBold", Helvetica;
+  font-weight: 800;
+  color: #f5fbff;
+  font-size: 40px;
+  letter-spacing: 0;
+  line-height: normal;
+  white-space: nowrap;
+  text-align: center;
 }
 
 .element .title {
   position: absolute;
   top: 0;
-  left: 20vw;
-  font-size: 4vw;
+  left: 50%;
+  transform: translateX(-50%);
+  font-family: "NanumSquare-Regular", Helvetica;
+  font-weight: 400;
+  color: #f5fbff;
+  font-size: 21px;
+  letter-spacing: 0;
+  line-height: normal;
+  white-space: nowrap;
+  text-align: center;
 }
 
 .element .start-icon-small {
   position: absolute;
-  width: 12vw;
-  height: 12vw;
-  top: 10vh;
-  left: 2vw;
+  width: 12%;
+  height: 12%;
+  top: 10%;
+  left: 2%;
 }
 
 .element .start-icon-large {
   position: absolute;
-  width: 7vw;
-  height: 7vw;
-  top: 18vh;
+  width: 7%;
+  height: 7%;
+  top: 18%;
   left: 0;
 }
 
 .element .image {
   position: absolute;
-  width: 50vw;
-  height: 25vh;
-  top: 22vh;
-  left: 20vw;
+  width: 50%;
+  height: 25%;
+  top: 22%;
+  left: 20%;
 }
 
 .element .hash,
 .element .p {
   position: absolute;
-  width: 18vw;
-  font-size: 3vw;
+  width: 18%;
+  font-family: "NanumSquare-Bold", Helvetica;
+  font-weight: 400;
+  color: #ffffff;
+  font-size: 14px;
+  letter-spacing: 0;
+  line-height: normal;
+  white-space: nowrap;
+  text-align: center;
 }
 .element .hash {
-  top: 55vh;
-  left: 70vw;
+  top: 55%;
+  left: 70%;
 }
 .element .p {
-  top: 59vh;
-  left: 70vw;
+  top: 59%;
+  left: 70%;
 }
 
 .element .text-wrapper {
@@ -151,18 +173,18 @@ img, .image {
 
 .element .share {
   position: absolute;
-  width: 8vw;
-  height: 8vw;
-  top: 36vh;
-  left: 18vw;
+  width: 8%;
+  height: 8%;
+  top: 36%;
+  left: 18%;
 }
 
 .element .img {
   position: absolute;
-  width: 7vw;
-  height: 7vw;
+  width: 7%;
+  height: 7%;
   top: 0;
-  left: 85vw;
+  left: 85%;
 }
 /* 노트 그룹 컨테이너 */
 .notes-container {
@@ -170,10 +192,10 @@ img, .image {
   justify-content: center;
   gap: 5%;
   position: absolute;
-  top: 78vh;
+  top: 78%;
   left: 0;
   right: 0;
-  padding: 0 5vw;
+  padding: 0 5%;
 }
 
 /* 공통 노트 그룹 스타일 */
@@ -183,7 +205,7 @@ img, .image {
   align-items: center;
   text-align: center;
   gap: 10px;
-  width: 30vw; /* 3개 그룹이 가로 정렬되도록 */
+  width: 30%; /* 3개 그룹이 가로 정렬되도록 */
 }
 
 /* 타이틀 공통 스타일 */
