--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ img, .image {
 
 .element .sub-title {
   position: absolute;
-  top: 4%;
+  top: 8%;
   left: 50%;
   transform: translateX(-50%);
   font-family: "NanumSquare-ExtraBold", Helvetica;
@@ -135,10 +135,11 @@ img, .image {
 
 .element .image {
   position: absolute;
-  width: 50%;
-  height: 25%;
-  top: 22%;
-  left: 20%;
+  width: 250px;
+  height: 250px;
+  top: 25%;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .element .hash,
@@ -155,11 +156,11 @@ img, .image {
   text-align: center;
 }
 .element .hash {
-  top: 55%;
+  top: 65%;
   left: 70%;
 }
 .element .p {
-  top: 59%;
+  top: 73%;
   left: 70%;
 }
 
