--- a/style.css
+++ b/style.css
@@ -135,11 +135,14 @@ img, .image {
 
 .element .image {
   position: absolute;
-  width: 250px;
-  height: 250px;
+  width: 80vw;
+  height: 80vw;
+  max-width: 300px;
+  max-height: 300px;
   top: 25%;
   left: 50%;
   transform: translateX(-50%);
+  object-fit: contain;
 }
 
 .element .hash,
