--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html, body {
   padding: 0;
 }
 
-body, .element, .overlap-group-wrapper, .overlap-group, .overlap {
+body, .element, .overlap-group, .overlap {
   width: 100vw;
   height: 100vh;
   min-width: 100vw;
@@ -14,7 +14,7 @@ body, .element, .overlap-group-wrapper, .overlap-group, .overlap {
   box-sizing: border-box;
 }
 
-.overlap-group, .overlap, .overlap-group-wrapper {
+.overlap-group, .overlap {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -37,13 +37,7 @@ img, .image {
   width: 100%;
 }
 
-.element .overlap-group-wrapper {
-  background-color: black;
-  background-size: cover;
-  width: 100%;
-  height: 100%;
-  position: relative;
-}
+
 
 .element .overlap-group {
   position: relative;
@@ -63,21 +57,7 @@ img, .image {
   background-size: cover;
 }
 
-.element .div {
-  position: absolute;
-  width: 95%;
-  height: 60%;
-  top: 2%;
-  left: 2%;
-}
 
-.element .overlap-2 {
-  position: absolute;
-  width: 95%;
-  height: 55%;
-  top: 3%;
-  left: 0;
-}
 
 .element .background-image {
   position: absolute;
@@ -175,7 +155,7 @@ img, .image {
 }
 .element .p {
   position: absolute;
-  top: 74%;
+  top: 72%;
   left: 70%;
   width: 18%;
   font-family: "NanumSquare-Bold", Helvetica;
